--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     justify-content: center;
     align-items: center;
     background: url('images/Redesign-Ecac-modo-branco.png') no-repeat center center;
-    background-size: contain;
+    background-size: cover;
     background-attachment: fixed;
     transition: background-image 0.3s ease-in-out;
 }
