--- a/style.css
+++ b/style.css
@@ -55,11 +55,13 @@ body {
 .container {
     position: relative;
     width: 96%;
-    height: 111%;
+    height: auto; /* Ajuste automático baseado no conteúdo */
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 2%;
     padding: 20px;
+    min-height: 100vh;
 }
 
 .login-container {
@@ -67,14 +69,27 @@ body {
     padding: 40px;
     border-radius: 8px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    max-width: 400px;
-    width: 100%;
+    max-width: 600px; /* Tamanho máximo fixo */
+    width: 180px;
+    min-width: 400px; /* Define um tamanho mínimo para o container */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 90vh;
 }
 
-.form-section h1 {
+.form-section h2 {
     color: #444;
     margin-bottom: 20px;
-    text-align: center;
+    text-align: left;
+    font-size: large;
+}
+.form-section h3 {
+    color: #444;
+    margin-bottom: 10px;
+    text-align: left;
+    font-size: medium;
+    font-weight: lighter;
 }
 
 label {
@@ -94,7 +109,7 @@ input[type="text"], input[type="password"] {
 
 .forgot-password {
     margin-bottom: 20px;
-    text-align: center;
+    text-align: left;
 }
 
 .forgot-password a {
@@ -120,13 +135,18 @@ input[type="text"], input[type="password"] {
 }
 
 .cancel-btn {
-    background-color: #ccc;
-    color: white;
+    background-color: #ffffff;
+    color: #0073e6;
+    border: 1px solid #0073e6;
+    width: 45%;
+    font-weight: bold;
 }
 
 .submit-btn {
     background-color: #0073e6;
     color: white;
+    width: 45%;
+    font-weight: bold;
 }
 
 .submit-btn:hover {
@@ -135,12 +155,13 @@ input[type="text"], input[type="password"] {
 
 .other-options {
     margin-top: 40px;
-    text-align: center;
+    text-align: left;
 }
 
-.other-options h2 {
+.other-options h4 {
     color: #444;
     margin-bottom: 10px;
+    text-align: left;
 }
 
 .other-options ul {
@@ -153,15 +174,14 @@ input[type="text"], input[type="password"] {
 }
 
 .other-options ul li a {
-    color: #0073e6;
+    color: #727272;
     text-decoration: none;
 }
 
 footer {
     text-align: center;
-    position: absolute;
-    bottom: 20px;
-    width: 100%;
+    margin-top: auto; /* Faz o footer ficar na parte inferior do container */
+    padding-top: 20px;
 }
 
 footer p {
@@ -189,5 +209,6 @@ footer p a:hover {
     .login-container {
         width: 90%; 
         padding: 20px;
+        min-height: 80vh;
     }
 }
