--- a/style.css
+++ b/style.css
@@ -138,7 +138,8 @@ input[type="text"], input[type="password"] {
 }
 
 .forgot-password a {
-    text-decoration:underline;
+    text-decoration:none;
+    color: #727272;
 }
 
 .form-actions {
@@ -214,13 +215,22 @@ input[type="text"], input[type="password"] {
     font-weight: lighter;
  }
 
- hr {
+ .identify {
     margin-bottom: 25px;
     margin-top: -5px;
     border: none;           
     height: 1px;            
     background-color: #000000;        
     width: 100%;
+ }
+
+ .forget{
+    margin-bottom: 25px;
+    margin-top: -2px;
+    border: none;           
+    height: 1px;            
+    background-color: #000000;        
+    width: 153px;
  }
 
 footer {
@@ -258,3 +268,4 @@ footer p a:hover {
     }
     
 }
+
